--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json --passWithNoTests"
   },
   "keywords": [
     "AMQP",
