--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "declaration": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
   },
 
   "include": ["src"], // which files to compile
