--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm ci
+      - run: npm run build --if-present
       - run: npm test
 
   publish-npm:
@@ -25,6 +26,7 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
+      - run: npm run build --if-present
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
