--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "test": "jest --config jestconfig.json --passWithNoTests"
+    "test": "jest --config jestconfig.json --passWithNoTests",
+    "upgrade-dependencies": "npx npm-check --update"
   },
   "repository": {
     "type": "git",
@@ -29,21 +30,21 @@
     "message-broker"
   ],
   "author": "Ricardo Silva",
-  "license": "MIT", 
+  "license": "MIT",
   "dependencies": {
     "amqplib": "^0.10.3"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.1",
-    "@types/jest": "^29.5.4",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.6.4",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/amqplib": "^0.10.4",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
